<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="10dp" >

    <TextView
        android:id="@+id/universeNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/universe_name" />

    <EditText
        android:id="@+id/universeName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"/>

    <TextView
        android:id="@+id/universeURLLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/universe_csv" />

    <EditText
        android:id="@+id/universeCSV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textUri"/>

    <TextView
        android:id="@+id/universeHTMLLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/universe_html_optional" />

    <EditText
        android:id="@+id/universeHTML"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textUri"/>

    <TextView
        android:id="@+id/universeLeagueSpinnerLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_league" />

    <Spinner
        android:id="@+id/defaultLeagueSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp" />

    <CheckBox
        android:id="@+id/defaultUniverse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:checked="true"
        android:text="@string/make_this_the_default_universe" />

</LinearLayout>