<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:defaultValue="1"
        android:entries="@array/pref_download_list_titles"
        android:entryValues="@array/pref_download_list_values"
        android:key="download_pref"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_download_pref"
        android:summary="%s"/>
    <SwitchPreference
        android:defaultValue="true"
        android:key="get_news"
        android:title="@string/get_news_pref_string" />
    <com.mobileootpinfo.mobileootpinfo.util.NumberPickerPreference
        android:defaultValue="15"
        android:key="news_articles"
        android:dependency="get_news"
        android:title="@string/fetch_news_article_qty" />
    <com.mobileootpinfo.mobileootpinfo.util.TimeOutPreference
        android:defaultValue="3"
        android:key="news_timeout"
        android:dependency="get_news"
        android:title="News timeout (seconds, per article)" />

</PreferenceScreen>
